# nutrify-ai-v1

./: .gitignore  CACHING_IMPLEMENTATION.md  DATABASE_SETUP.md  OPTIMIZATION_GUIDE.md  VPS_DEPLOYMENT_TROUBLESHOOTING.md  docker-compose.yml  vercel.json
.github/: copilot-instructions.md
backend/: .dockerignore  .env.example  .gitignore  AI_AGENT_SCHEMA_FIX_SUMMARY.md  AI_IMPLEMENTATION_SUMMARY.md  DOCKER.md  Dockerfile  HOW_TO_RUN.md  QUICKSTART.md  README.md  RENDER_DEPLOY.md  ai_service.py  alembic.ini  docker-compose.yml  init_db.sh  main.py  pyproject.toml  requirements.txt  schemas.py  setup.sh  start-render.sh  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 01b54ac28e7d_initial_migration_with_all_models.py  20260125100227_add_jsonb_preference_columns.py  2aa036d7f694_change_exercise_id_and_workout_id_to_.py  a2dc7488002c_add_performance_indexes_for_workout_.py  a3b4c5d6e7f8_add_meal_and_workout_logs.py  b5c6d7e8f9a0_add_workout_session_tables.py  c28b4abf6b77_change_exercise_id_and_workout_id_.py  c7d8e9f0a1b2_add_gamification_tables.py  de151ea0af79_add_subscription_and_payment_tables.py
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  fitness_agent.py  motivation_agent.py  nutrition_agent.py
backend/app/api/: dependencies.py
backend/app/api/routes/: ai.py  auth.py  fitness.py  gamification.py  nutrition.py  progress.py  runs.py  subscriptions.py  users.py  workout_sessions.py
backend/app/core/: cache.py  config.py  database.py  llm_factory.py  redis.py  security.py
backend/app/memory/: __init__.py  hierarchical_memory.py
backend/app/models/: __init__.py  fitness.py  gamification.py  nutrition.py  progress.py  run_activity.py  subscription.py  user.py  workout_session.py
backend/app/schemas/: ai.py  auth.py  fitness.py  gamification.py  nutrition.py  progress.py  run_activity.py  subscription.py  user.py  workout_session.py
backend/app/services/: generation_service.py  stripe_service.py  vision_service.py
backend/app/tools/: __init__.py  fitness_tools.py  nutrition_tools.py
docs/: AI_AGENT_EXECUTION_FLOW.md  FLUTTER_UI_ADDITIONS.md  IMPLEMENTATION_STATUS.md  ISSUES_AND_FIXES.md  Nutrify-AI_AgentConsiderations.md  Nutrify-AI_Database_Schema_Guide.md  (+5 more)
(+132 files in other folders)
